# Heimdallr

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEOWNERS  Dockerfile.api  LICENSE.md  NOTICE.md  PROJECT_GATE.md  README.md  RECOVERY_STATUS.md  START_CHECKLIST.md  UPCOMING.md  anthropic_api.py  ap_rx_openai_api.py  app.py  config.py  ctr_api.py  docker-compose.api.yml  index.html  medgemma_api.py  medgemma_prompts.py  prepare.py  pyproject.toml  requirements-total-seg.txt  requirements.txt  run.py  server.py  test_bmd_only.csv  test_deid_gateway.py  totalsegmentator_api.py
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
api/: anthropic.py  ap_rx_openai.py  ctr.py  medgemma.py  totalsegmentator.py
clients/: uploader.py
config/: dicom_egress.example.json  dicom_egress.json  intake_pipeline.json  integration_delivery.example.json  integration_dispatch.example.json  metrics_pipeline.example.json  metrics_pipeline.json  presentation.example.json  presentation.json  qc_evidence.example.json  resource_monitor.example.json  segmentation_pipeline.example.json  segmentation_pipeline.gpu.example.json  segmentation_pipeline.json  series_selection.json  space_manager.example.json
core/: case_pdf_report.py  database.py  kidney_stone_triage.py  metrics.py  prepare.py
database/: README.md  schema.sql
desktop/: AGENTS.md  README.md
docs/: AGENTS.md  API.md  ARCHITECTURE.md  CONTAINER_API.md  CONTRACTS.md  DECISIONS.md  DESKTOP.md  GUIA_OPERACIONAL_CODEX.md  OPERATIONS.md  RUNTIME_REQUIREMENTS.md  UPCOMING.md  index.html  (+17 more)
(+298 files in other folders)
