[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heimdallr"
version = "0.2.1"
description = "Operational radiology control plane and segmentation pipeline."
requires-python = ">=3.14,<3.15"

[project.scripts]
heimdallr-tui = "heimdallr.tui.__main__:main"
heimdallr-queue-tui = "heimdallr.tui.simple:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["heimdallr*"]

[tool.setuptools.package-data]
heimdallr = ["tui/*.tcss", "locales/*/LC_MESSAGES/*.po"]
